--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,17 @@
 <resources>
     <string name="app_name">Simple weather</string>
+    <string name="temp_default" translatable="false">30°</string>
+    <string name="day_weather_pic" translatable="false">day weather pic</string>
+    <string name="temp_default_night" translatable="false">15°</string>
+    <string name="city_default">Moscow</string>
+    <string name="wind_default_speed">5</string>
+    <string name="wind_default_direction">SE</string>
+    <string name="humidity_default" translatable="false">70%</string>
+    <string name="monday">Monday</string>
+    <string name="tuesday">Tuesday</string>
+    <string name="wednesday">Wednesday</string>
+    <string name="thursday">Thursday</string>
+    <string name="friday">Friday</string>
+    <string name="saturday">Saturday</string>
+    <string name="sunday">Sunday</string>
 </resources>
