--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,21 @@
     <string name="friday">Friday</string>
     <string name="saturday">Saturday</string>
     <string name="sunday">Sunday</string>
+    <string name="settings">Settings</string>
+    <string name="favourites">Favourites</string>
+    <string name="search">Search</string>
+    <string name="title_activity_settings" translatable="false">SettingsActivity</string>
+
+    <string name="appearence">Appearance</string>
+    <string name="pref_dark_theme" translatable="false">Dark theme</string>
+    <string name="prefs_switch_dark_summary">Enable dark theme</string>
+    <string name="prefs_switch_dark_title">Dark theme</string>
+    <string name="pref_about">About</string>
+    <string name="prefs_developer_title">Developer</string>
+    <string name="prefs_developer" translatable="false">Evgeny Antonov</string>
+    <string name="prefs_ghub" translatable="false">Github</string>
+    <string name="prefs_ghub_link" translatable="false">https://github.com/capevery/simpleWeather</string>
+    <string name="prefs_version_title">Version</string>
+    <string name="favourite">Favourite</string>
+    <string name="country_default">Country</string>
 </resources>
