--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,4 +31,8 @@
     <string name="prefs_version_title">Version</string>
     <string name="favourite">Favourite</string>
     <string name="country_default">Country</string>
+    <string name="sign_in_username">Username</string>
+    <string name="sign_in_email">signedin@email.com</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
