--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -24,4 +24,6 @@
     <string name="country_default">Страна</string>
     <string name="sign_in_username">Sign in</string>
     <string name="sign_in_email">signedin@email.com</string>
+    <string name="undo_delete_text">Undo delete</string>
+    <string name="snack_bar_undo">undo</string>
 </resources>
