--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -27,4 +27,6 @@
     <string name="undo_delete_text">Удалено</string>
     <string name="snack_bar_undo">Отмена</string>
     <string name="about">О приложении</string>
+    <string name="menu">Меню</string>
+    <string name="info">Инфо</string>
 </resources>
