--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,4 +40,7 @@
     <string name="undo_delete_text">Deleted</string>
     <string name="snack_bar_undo">undo</string>
     <string name="about">About</string>
+    <string name="fab" translatable="false">fab</string>
+    <string name="info">Info</string>
+    <string name="menu">Menu</string>
 </resources>
