--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -29,4 +29,6 @@
     <string name="about">О приложении</string>
     <string name="menu">Меню</string>
     <string name="info">Инфо</string>
+    <string name="sunny">Солнечно</string>
+    <string name="city_not_found">Город не найден</string>
 </resources>
