--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Simple weatherDescription</string>
-    <string name="temp_default" translatable="false">%1$d°</string>
+    <string name="temp_default" translatable="false">%1$.0f°</string>
     <string name="temp_default_shown" translatable="false">30°</string>
     <string name="day_weather_pic" translatable="false">day weatherDescription pic</string>
     <string name="city_default">Moscow</string>
@@ -43,4 +43,6 @@
     <string name="fab" translatable="false">fab</string>
     <string name="info">Info</string>
     <string name="menu">Menu</string>
+    <string name="sunny">Sunny</string>
+    <string name="city_not_found">City not found</string>
 </resources>
