--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Simple weatherDescription</string>
+    <string name="app_name">Simple weather</string>
     <string name="temp_default" translatable="false">%1$.0f°</string>
     <string name="temp_default_shown" translatable="false">30°</string>
     <string name="day_weather_pic" translatable="false">day weatherDescription pic</string>
