--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -31,4 +31,8 @@
     <string name="info">Инфо</string>
     <string name="sunny">Солнечно</string>
     <string name="city_not_found">Город не найден</string>
+    <string name="city_nf">ГОрод не найден!</string>
+    <string name="exit_confirm">Are you sure you want to exit?</string>
+    <string name="yes">Yes</string>
+    <string name="no">No</string>
 </resources>
