--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,4 +45,9 @@
     <string name="menu">Menu</string>
     <string name="sunny">Sunny</string>
     <string name="city_not_found">City not found</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="city_nf">City not found!</string>
+    <string name="exit_confirm">Are you sure you want to exit?</string>
+    <string name="yes">Yes</string>
+    <string name="no">No</string>
 </resources>
